Remove save button

--- a/app/views/gradcourses/show.html.erb
+++ b/app/views/gradcourses/show.html.erb
@@ -28,15 +28,15 @@
   <% end %>
 </div>
 
-<%= link_to "Gradstudent", new_gradstudent_path %>
+<%# <%= link_to "Gradstudent", new_gradstudent_path %>
 
-<p style="color: green"><%= notice %></p>
+<%# <p style="color: green"><%= notice %>
 
-<h1>Grades</h1>
+<%# <h1>Grades</h1> %>
 
 
 
-<%= link_to "New grade", new_grade_path %>
+<%# <%= link_to "New grade", new_grade_path %>
 
 
 <%# <%= link_to "Show this cadet", cadet %> 
