--- a/app/views/gradstudents/_gradstudent.html.erb
+++ b/app/views/gradstudents/_gradstudent.html.erb
@@ -30,12 +30,12 @@
     <%= form.hidden_field :gradcourse_id, value: @gradcourse.id %>
     <%= form.hidden_field :gradstudent_id, value: gradstudent.id %>
 
-    <%= gradstudent.id%>
-    <%= @gradcourse.id %>
+    <%# <%= gradstudent.id%>
+    <%# <%= @gradcourse.id %>
 
-    <div>
+    <%# <div>
       <%= form.submit %>
-    </div>
+    <%# </div> %>
     
   </div>
 </div>
